--- a/stylesheets/trac.css
+++ b/stylesheets/trac.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4 {
 }
 h1 { 
   font-size: 32px; 
+  line-height: 32px; 
   margin: 0 0em 0.62em 0; 
   padding-top: 1em; 
   padding-bottom: 0.4em; 
